# insurance-fairness-ot

./: README.md  pyproject.toml  run_databricks_tests.py  run_tests.py  run_tests_databricks.py
.github/workflows/: ci.yml
notebooks/: demo_discrimination_free_pricing.py  run_tests.py
src/insurance_fairness_ot/: __init__.py  _utils.py  _validators.py  causal.py  correction.py  pricing.py  report.py
tests/: test_causal.py  test_correction.py  test_pricing.py  test_report.py  test_utils.py  test_validators.py
