[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-fairness-ot"
version = "0.1.0"
description = "Discrimination-free insurance pricing via Lindholm marginalisation, causal path decomposition, and Wasserstein barycenter correction"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "pricing",
    "actuarial",
    "fairness",
    "optimal-transport",
    "discrimination",
    "causal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "networkx>=3.0",
    "POT>=0.9",
    "polars>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
catboost = ["catboost>=1.2"]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-fairness-ot"
Repository = "https://github.com/burning-cost/insurance-fairness-ot"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_fairness_ot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
